fix meson build for appmenu module - missing src files

--- a/src/modules/appmenu/meson.build
+++ b/src/modules/appmenu/meson.build
@@ -5,6 +5,9 @@ appmenu_dist = [
 
 appmenu_src = [
 	'e_mod_main.c',
+        'e_mod_appmenu_render.c',
+        'e_mod_dbus_registrar_server.c',
+        'e_mod_appmenu_private.h'
 ]
 
 appmenu_dir = join_paths(dir_module_e, 'appmenu', module_arch)
