meson - fix config install to install cfg files in right places and perms
cfg files were installed on top of eachother in the wrong directories
and they were unreadable by anyone but root (if you sudo make
install)... so fix this with my new chmod fixing stuff (yes meson
doesnt let you specific permissions for custom targets).

--- a/config/default/meson.build
+++ b/config/default/meson.build
@@ -9,7 +9,11 @@ foreach cd: config_default
 		command: [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
 		output: config_default_output[i],
 		install: true,
-		install_dir: dir_config
+		install_dir: join_paths(dir_config, 'default')
 	)
 	i += 1
+endforeach
+foreach cd: config_default_output
+	out = join_paths(dir_config, 'default', cd)
+	meson.add_install_script(chmod, 'a+r', out)
 endforeach
