--- a/config/mobile/meson.build
+++ b/config/mobile/meson.build
@@ -8,7 +8,7 @@ foreach cd: config_mobile
 		command: [eet, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
 		output: config_mobile_output[i],
 		install: true,
-		install_dir: dir_config
+		install_dir: join_paths(dir_config, 'mobile')
 	)
 	i += 1
 endforeach
@@ -17,3 +17,7 @@ config_dist_mobile = ['enlightenment-mobile.png', 'profile.desktop']
 install_data(config_dist_mobile,
 	install_dir: join_paths(dir_config, 'mobile')
 )
+foreach cd: config_mobile_output
+	out = join_paths(dir_config, 'mobile', cd)
+	meson.add_install_script(chmod, 'a+r', out)
+endforeach
