meson: we need -rdynamic here not -export-dynamic
this is passed to the compiler not linker, so we need to tell the
compiler to pass that to the linker.

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -429,7 +429,7 @@ executable('enlightenment',
 	include_directories: include_directories('.', 'efx', 'generated', '../..'),
 	dependencies: deps_e,
 	c_args: '-DE_LOGGING=1',
-	link_args: '-export-dynamic',
+	link_args: '-rdynamic',
 	install_dir: dir_bin,
 	install: true
 )
