module build - clean up and fix meson install of pretty much all modules
so we';re missing installing desktop files. edj icon files, wizard
data files in the wrong place, and much more. this also cleans up the
module meson build of pretty much all modules and make their build
files cimple and consistent so it's far easier to re-use things from
one module to the next. we should aim for simplicity, consistency
between as much as possible so we can refactor and turn into maybe
functions later. imho that starts with consistency though. until i can
see all the common patterns clearly, i don't want to write functions
yet. it's easier to see if all the files are consistently using the
same vars and formatting etc. etc. etc.

but either way the installation needs fixing so it installs all files
in the right places with the right permissions etc. etc. etc.

this doesn't fix all module build files bt all the ones i found that
were broken installs and they use what i think is a cleaner/simpler
template, BUT there is far too much copy & pastage here... far too
much.i need to find a cleaner way to automate this.

--- a/src/modules/luncher/meson.build
+++ b/src/modules/luncher/meson.build
@@ -1,23 +1,35 @@
-luncher_src = [
-	'bar.c',
-	'config.c',
-	'grid.c',
-	'mod.c',
-	'luncher.h',
+module = 'luncher'
+opt    = 'luncher'
+conf   = 'USE_MODULE_LUNCHER'
+
+src = [
+  'mod.c',
+  'bar.c',
+  'config.c',
+  'grid.c',
+  'luncher.h'
 ]
 
-luncher_dir = join_paths(dir_module_e, 'luncher', module_arch)
-if get_option('luncher') == true
-	config_h.set('USE_MODULE_LUNCHER', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(luncher_dir, 'luncher.so')
-	shared_module('luncher',
-                luncher_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: luncher_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
 
