--- a/src/modules/pager/meson.build
+++ b/src/modules/pager/meson.build
@@ -1,25 +1,36 @@
-pager_src = [
-	'e_mod_config.c',
-	'e_mod_main.c',
-	'e_mod_main.h',
-	'gadget/pager.h',
-	'gadget/pager.c',
-	'gadget/mod.c',
-	'gadget/config.c'
+module = 'pager'
+opt    = 'pager'
+conf   = 'USE_MODULE_PAGER'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_config.c',
+  'e_mod_main.h',
+  'gadget/mod.c',
+  'gadget/pager.h',
+  'gadget/pager.c',
+  'gadget/config.c'
 ]
 
-pager_dir = join_paths(dir_module_e, 'pager', module_arch)
-if get_option('pager') == true
-	config_h.set('USE_MODULE_PAGER', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(pager_dir, 'pager.so')
-	shared_module('pager',
-                pager_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: pager_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
