--- a/src/modules/sysinfo/meson.build
+++ b/src/modules/sysinfo/meson.build
@@ -1,72 +1,83 @@
-sysinfo_src = [
-	'mod.c',
-	'sysinfo.c',
-	'sysinfo.h',
-	'batman/batman.h',
-	'batman/batman.c',
-	'batman/batman_fallback.c',
-	'batman/batman_config.c',
-	'thermal/thermal.h',
-	'thermal/thermal.c',
-	'thermal/thermal_config.c',
-	'thermal/thermal_fallback.c',
-	'cpuclock/cpuclock.h',
-	'cpuclock/cpuclock.c',
-	'cpuclock/cpuclock_config.c',
-	'cpumonitor/cpumonitor.h',
-	'cpumonitor/cpumonitor.c',
-	'cpumonitor/cpumonitor_config.c',
-	'cpumonitor/cpumonitor_proc.c',
-	'memusage/memusage.h',
-	'memusage/memusage.c',
-	'memusage/memusage_config.c',
-	'memusage/memusage_proc.c',
-	'netstatus/netstatus.h',
-	'netstatus/netstatus.c',
-	'netstatus/netstatus_config.c',
-	'netstatus/netstatus_proc.c',
+module = 'sysinfo'
+opt    = 'sysinfo'
+conf   = 'USE_MODULE_SYSINFO'
+
+src = [
+  'mod.c',
+  'sysinfo.c',
+  'sysinfo.h',
+  'batman/batman.h',
+  'batman/batman.c',
+  'batman/batman_fallback.c',
+  'batman/batman_config.c',
+  'thermal/thermal.h',
+  'thermal/thermal.c',
+  'thermal/thermal_config.c',
+  'thermal/thermal_fallback.c',
+  'cpuclock/cpuclock.h',
+  'cpuclock/cpuclock.c',
+  'cpuclock/cpuclock_config.c',
+  'cpumonitor/cpumonitor.h',
+  'cpumonitor/cpumonitor.c',
+  'cpumonitor/cpumonitor_config.c',
+  'cpumonitor/cpumonitor_proc.c',
+  'memusage/memusage.h',
+  'memusage/memusage.c',
+  'memusage/memusage_config.c',
+  'memusage/memusage_proc.c',
+  'netstatus/netstatus.h',
+  'netstatus/netstatus.c',
+  'netstatus/netstatus_config.c',
+  'netstatus/netstatus_proc.c'
 ]
 
 if config_h.has('HAVE_EEZE') == true
-	sysinfo_src += ['batman/batman_udev.c', 'thermal/thermal_udev.c']
+  src += [
+           'batman/batman_udev.c',
+           'thermal/thermal_udev.c'
+         ]
 elif host_machine.system().contains('bsd') == true
-	sysinfo_src += ['batman/batman_sysctl.c',
-		'thermal/thermal_sysctl.c',
-		'cpuclock/cpuclock_sysctl.c',
-		'netstatus/netstatus_sysctl.c',
-		'cpumonitor/cpumonitor_sysctl.c',
-		'memusage/memusage_sysctl.c'
-	]
+  src += ['batman/batman_sysctl.c',
+          'thermal/thermal_sysctl.c',
+          'cpuclock/cpuclock_sysctl.c',
+          'netstatus/netstatus_sysctl.c',
+          'cpumonitor/cpumonitor_sysctl.c',
+          'memusage/memusage_sysctl.c'
+         ]
 else
-	sysinfo_src += ['batman/batman_upower.c',
-		'thermal/thermal_sysctl.c',
-		'cpuclock/cpuclock_sysctl.c'
-	]
+  src += ['batman/batman_upower.c',
+          'thermal/thermal_sysctl.c',
+          'cpuclock/cpuclock_sysctl.c'
+         ]
 endif
 
-sysinfo_dir = join_paths(dir_module_e, 'sysinfo', module_arch)
-if get_option('sysinfo') == true
-	config_h.set('USE_MODULE_SYSINFO', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(sysinfo_dir, 'sysinfo.so')
-	shared_module('sysinfo',
-                sysinfo_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: sysinfo_dir,
-                install: true
-        )
-
-	executable('cpuclock_sysfs',
-		'cpuclock/cpuclock_sysfs.c',
-		include_directories: include_directories(module_includes),
-		dependencies: dep_crypt,
-		c_args: suid_cflags,
-		link_args: suid_ldflags,
-		install_dir: join_paths(dir_module_e, 'sysinfo'),
-		install: true
-	)
-	suid_exes == join_paths(sysinfo_dir, 'cpuclock_sysfs')
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
+        executable('cpuclock_sysfs',
+                   'cpuclock/cpuclock_sysfs.c',
+                   dependencies: dep_crypt,
+                   c_args      : suid_cflags,
+                   link_args   : suid_ldflags,
+                   install_dir : dir_mod_bin,
+                   install     : true
+                  )
+        suid_exes += join_paths(dir_mod_bin, 'cpuclock_sysfs')
 endif
-
