--- a/src/modules/tasks/meson.build
+++ b/src/modules/tasks/meson.build
@@ -1,21 +1,32 @@
-tasks_src = [
-	'e_mod_config.c',
-	'e_mod_main.c',
-	'e_mod_main.h',
+module = 'tasks'
+opt    = 'tasks'
+conf   = 'USE_MODULE_TASKS'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_config.c',
+  'e_mod_main.h'
 ]
 
-tasks_dir = join_paths(dir_module_e, 'tasks', module_arch)
-if get_option('tasks') == true
-	config_h.set('USE_MODULE_TASKS', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(tasks_dir, 'tasks.so')
-	shared_module('tasks',
-                tasks_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: tasks_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
