--- a/src/modules/wl_desktop_shell/meson.build
+++ b/src/modules/wl_desktop_shell/meson.build
@@ -1,35 +1,46 @@
-wl_desktop_shell_src = [
-	'e_mod_input_panel.c',
-	'e_mod_main.c',
-	'wl_shell.c',
-	'xdg5.c',
-	'xdg6.c',
-	'e_mod_main.h',
+module = 'wl_desktop_shell'
+opt    = 'wl-desktop-shell'
+conf   = 'USE_MODULE_WL_DESKTOP_SHELL'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_input_panel.c',
+  'wl_shell.c',
+  'xdg5.c',
+  'xdg6.c',
+  'e_mod_main.h'
 ]
 
-wl_desktop_shell_dir = join_paths(dir_module_e, 'wl_desktop_shell', module_arch)
-if get_option('wl-desktop-shell') == true and get_option('wayland') == true
-	config_h.set('USE_MODULE_WL_DESKTOP_SHELL', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-	protos = [
-		'@0@/unstable/xdg-shell/xdg-shell-unstable-v5.xml'.format(dir_wayland_protocols),
-		'@0@/unstable/xdg-shell/xdg-shell-unstable-v6.xml'.format(dir_wayland_protocols),
-		'@0@/unstable/input-method/input-method-unstable-v1.xml'.format(dir_wayland_protocols),
-	]
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
 
-	foreach proto: protos
-		wl_desktop_shell_src += gen_scanner_server.process(proto)
-		wl_desktop_shell_src += gen_scanner_impl.process(proto)
-	endforeach
+if get_option(opt) == true and get_option('wayland') == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
 
-        module_files += join_paths(wl_desktop_shell_dir, 'wl_desktop_shell.so')
-	shared_module('wl_desktop_shell',
-                wl_desktop_shell_src,
+  install_data(icon, install_dir: dir_mod)
+
+  protos = [
+    '@0@/unstable/xdg-shell/xdg-shell-unstable-v5.xml'.format(dir_wayland_protocols),
+    '@0@/unstable/xdg-shell/xdg-shell-unstable-v6.xml'.format(dir_wayland_protocols),
+    '@0@/unstable/input-method/input-method-unstable-v1.xml'.format(dir_wayland_protocols),
+  ]
+  foreach proto: protos
+    src += gen_scanner_server.process(proto)
+    src += gen_scanner_impl.process(proto)
+  endforeach
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: wl_desktop_shell_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
 
