--- a/src/modules/msgbus/meson.build
+++ b/src/modules/msgbus/meson.build
@@ -1,26 +1,37 @@
-msgbus_src = [
-	'e_mod_main.c',
-	'msgbus_audit.c',
-	'msgbus_desktop.c',
-	'msgbus_lang.c',
-	'msgbus_module.c',
-	'msgbus_profile.c',
-	'msgbus_window.c',
-	'e_mod_main.h',
+module = 'msgbus'
+opt    = 'msgbus'
+conf   = 'USE_MODULE_MSGBUS'
+
+src = [
+  'e_mod_main.c',
+  'msgbus_audit.c',
+  'msgbus_desktop.c',
+  'msgbus_lang.c',
+  'msgbus_module.c',
+  'msgbus_profile.c',
+  'msgbus_window.c',
+  'e_mod_main.h'
 ]
 
-msgbus_dir = join_paths(dir_module_e, 'msgbus', module_arch)
-if get_option('msgbus') == true
-	config_h.set('USE_MODULE_MSGBUS', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(msgbus_dir, 'msgbus.so')
-	shared_module('msgbus',
-                msgbus_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: msgbus_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
