--- a/src/modules/packagekit/meson.build
+++ b/src/modules/packagekit/meson.build
@@ -1,24 +1,35 @@
-packagekit_src = [
-	'e_mod_config.c',
-	'e_mod_main.c',
-	'e_mod_packagekit.c',
-	'e_mod_config.h',
-	'e_mod_main.h',
-	'e_mod_packagekit.h',
+module = 'packagekit'
+opt    = 'packagekit'
+conf   = 'USE_MODULE_PACKAGEKIT'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_config.c',
+  'e_mod_packagekit.c',
+  'e_mod_config.h',
+  'e_mod_main.h',
+  'e_mod_packagekit.h'
 ]
 
-packagekit_dir = join_paths(dir_module_e, 'packagekit', module_arch)
-if get_option('packagekit') == true
-	config_h.set('USE_MODULE_PACKAGEKIT', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(packagekit_dir, 'packagekit.so')
-	shared_module('packagekit',
-                packagekit_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: packagekit_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
