--- a/src/modules/quickaccess/meson.build
+++ b/src/modules/quickaccess/meson.build
@@ -1,24 +1,35 @@
-quickaccess_src = [
-	'e_mod_config.c',
-	'e_mod_main.c',
-	'e_mod_quickaccess.c',
-	'e_quickaccess_bindings.c',
-	'e_quickaccess_db.c',
-	'e_mod_main.h',
+module = 'quickaccess'
+opt    = 'quickaccess'
+conf   = 'USE_MODULE_QUICKACCESS'
+
+src = [
+  'e_mod_main.c',
+  'e_mod_config.c',
+  'e_mod_quickaccess.c',
+  'e_quickaccess_bindings.c',
+  'e_quickaccess_db.c',
+  'e_mod_main.h',
 ]
 
-quickaccess_dir = join_paths(dir_module_e, 'quickaccess', module_arch)
-if get_option('quickaccess') == true
-	config_h.set('USE_MODULE_QUICKACCESS', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(quickaccess_dir, 'quickaccess.so')
-	shared_module('quickaccess',
-                quickaccess_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: quickaccess_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
-
