--- a/src/modules/syscon/meson.build
+++ b/src/modules/syscon/meson.build
@@ -1,23 +1,34 @@
-syscon_src = [
-	'e_int_config_syscon.c',
-	'e_mod_main.c',
-	'e_syscon.c',
-	'e_syscon_gadget.c',
-	'e_mod_main.h',
+module = 'syscon'
+opt    = 'syscon'
+conf   = 'USE_MODULE_SYSCON'
+
+src = [
+  'e_mod_main.c',
+  'e_int_config_syscon.c',
+  'e_syscon.c',
+  'e_syscon_gadget.c',
+  'e_mod_main.h'
 ]
 
-syscon_dir = join_paths(dir_module_e, 'syscon', module_arch)
-if get_option('syscon') == true
-	config_h.set('USE_MODULE_SYSCON', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(syscon_dir, 'syscon.so')
-	shared_module('syscon',
-                syscon_src,
-                include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: syscon_dir,
-                install: true
-        )
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
+               include_directories: include_directories(module_includes),
+               name_prefix        : '',
+               dependencies       : module_deps,
+               install_dir        : dir_mod_bin,
+               install            : true
+              )
 endif
-
