--- a/src/modules/time/meson.build
+++ b/src/modules/time/meson.build
@@ -1,23 +1,35 @@
-time_src = [
-	'clock.c',
-	'config.c',
-	'mod.c',
-	'time.c',
-	'clock.h',
+module = 'time'
+opt    = 'time'
+conf   = 'USE_MODULE_TIME'
+
+src = [
+  'mod.c',
+  'clock.c',
+  'config.c',
+  'time.c',
+  'clock.h'
 ]
 
-time_dir = join_paths(dir_module_e, 'time', module_arch)
-if get_option('time') == true
-	config_h.set('USE_MODULE_TIME', '1')
+icon = [
+  'e-module-' + module + '.edj',
+  'module.desktop'
+]
 
-        module_files += join_paths(time_dir, 'time.so')
-	shared_module('time',
-                time_src,
+dir_mod     = join_paths(dir_module_e, module)
+dir_mod_bin = join_paths(dir_mod, module_arch)
+
+if get_option(opt) == true
+  config_h.set(conf, '1')
+  module_files += join_paths(dir_mod_bin, module + '.so')
+
+  install_data(icon, install_dir: dir_mod)
+
+  shared_module(module, src,
                 include_directories: include_directories(module_includes),
-                name_prefix: '',
-                dependencies: module_deps,
-                install_dir: time_dir,
-                install: true
-        )
+                name_prefix        : '',
+                dependencies       : module_deps,
+                install_dir        : dir_mod_bin,
+                install            : true
+               )
 endif
 
